Layout the setup and add_item fragments
Also, wire up the nav_graph.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Family Todo</string>
+    <string name="add_item_title">Add an item to the todo list</string>
 </resources>
