--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="setup">Setup</string>
     <string name="user_name">User name</string>
     <string name="todo_server_url">Todo server URL</string>
+    <string name="todo_item_description">Todo Item Description</string>
 </resources>
