--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="user_name">User name</string>
     <string name="todo_server_url">Todo server URL</string>
     <string name="todo_item_description">Todo Item Description</string>
+    <string name="add_item">Add</string>
+    <string name="clear_list">Clear</string>
+    <string name="prioritize">Order</string>
+    <string name="refresh">Refresh</string>
 </resources>
